[package]
name = "unfurl"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["web_screen_reader"] }
serde_json = "1"

# for native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# for web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"

[[bin]]
name = "unfurl"
path = "src/main.rs"
